<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/common_margin"
    android:orientation="vertical">
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/theme_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_theme" />
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chips_themes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:selectionRequired="true"
        app:singleSelection="true"
        android:layout_marginTop="@dimen/common_margin">
        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:id="@+id/purple_theme"
            android:text="@string/purple_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:id="@+id/blue_grey_theme"
            android:text="@string/blue_grey_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:id="@+id/red_theme"
            android:text="@string/red_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:id="@+id/light_blue_theme"
            android:text="@string/light_blue_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.chip.ChipGroup>

</LinearLayout>